# workspace-cli

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  doc.md  pyproject.toml  refactor.md  requirements.txt  run_cli.py  setup.py  workspace.json
.specify/memory/: constitution.md
dev-doc/: design.md  dev.md  e2e.md  requirement.md  workflow.md
tests/: e2e_scenario_runner.py  integration_test.py  reproduce_concurrency.py
tests/e2e/: test_complex_concurrency.py  test_daemon_lifecycle.py  test_full_scenario.py  test_resident_preview_e2e.py
tests/functional/: conftest.py  test_clean_preview.py  test_debounce_consistency.py  test_lazy_config.py  test_preview_hooks.py  test_preview_runner.py  test_process_group.py  test_resident_preview.py  test_run_preview_e2e.py  test_sync_expand.py  test_sync_functional.py  test_watcher_debug.py  test_workflow.py  test_worktree_discovery.py
tests/unit/: test_concurrency.py  test_config_creation.py  test_config_detection.py  test_config_loading.py  test_create_preview_switch.py  test_debug_mode.py  test_git.py  test_git_provider.py  test_git_worktree_existing.py  test_manager.py  test_models.py  test_preview_logic.py  test_preview_switch.py  test_runner.py  test_sync.py  test_sync_logic.py  test_watcher_debounce.py  test_workspace.py
workspace_cli/: config.py  main.py  models.py
workspace_cli/client/: api.py
workspace_cli/core/: runner.py  sync.py  workspace.py
workspace_cli/models/: __init__.py
workspace_cli/server/: app.py  git.py  manager.py  runner.py  watcher.py
workspace_cli/utils/: git.py  logger.py
